# s-structured-log-rs

./: .gitignore  Cargo.toml  README.md  index.html  rustfmt.toml
doc/: search-index.js
doc/implementors/log/: trait.Log.js
doc/implementors/s_structured_log/: trait.StructuredLog.js
doc/implementors/serde/ser/: trait.Serialize.js
doc/implementors/std/error/: trait.Error.js
doc/s_structured_log/: enum.LoggerOutput.html  fn.escape_str.html  fn.init.html  fn.q.html  fn.serialize.html  index.html  macro.json_format!.html  macro.json_object!.html  macro.s_debug!.html  macro.s_error!.html  macro.s_info!.html  macro.s_trace!.html  macro.s_warn!.html  sidebar-items.js  struct.JsonLogger.html  struct.SLogJson.html  trait.StructuredLog.html
doc/s_structured_log/doc/: index.html
doc/serde/iter/: struct.LineColIterator.html
doc/serde_json/de/: struct.StreamDeserializer.html
doc/src/dtoa/: diyfp.rs.html  dtoa.rs.html  lib.rs.html
doc/src/itoa/: lib.rs.html
doc/src/log/: lib.rs.html  macros.rs.html
doc/src/num_traits/: bounds.rs.html  cast.rs.html  float.rs.html  identities.rs.html  int.rs.html  lib.rs.html  sign.rs.html
doc/src/num_traits/ops/: checked.rs.html  mod.rs.html  saturating.rs.html
doc/src/s_structured_log/src/: doc.rs.html  lib.rs.html
doc/src/serde/: bytes.rs.html  iter.rs.html  lib.rs.html  utils.rs.html
doc/src/serde/de/: impls.rs.html  (+3 more)
doc/src/serde_json/: builder.rs.html  de.rs.html  error.rs.html  forward.rs.html  lib.rs.html  read.rs.html  ser.rs.html  value.rs.html
examples/: basic.rs  complicated_json.rs
src/: doc.rs  lib.rs
(+2 files in other folders)
