[package]
name = "s-structured-log"
version = "0.0.0"
authors = ["siphilia <siphilia.rn@gmail.com>"]
license = "Apache-2.0"
description = "Logging with structured data like json."
readme = "README.md"
documentation = "http://siphilia.github.io/s-structured-log/doc/s-structured-log"
repository = "http://github.com/siphilia/s-structured-log"

[features]
default = []

[dependencies]
log = "0.3.6"
serde = "0.7.11"
serde_json = "0.7.3"
