[package]
name = "s-structured-log"
version = "0.1.0"
authors = ["siphilia <siphilia.rn@gmail.com>"]
license = "Apache-2.0"
description = "Logging with structured data like json."
readme = "README.md"
documentation = "http://siphilia.github.io/s-structured-log-rs/doc/s_structured_log"
repository = "http://github.com/siphilia/s-structured-log-rs"

[features]
default = []

[dependencies]
log = "0.3.6"
serde = "0.8.0"
serde_json = "0.8.0"
